Align with 10.1.x onwards
Hopefully fixes issue not being able to configure tests for APR/Native
and FFM at the same time